Added --add-opens=java.base/java.util=ALL-UNNAMED to fix failures in query tests